# FreeCAD

./: .gitignore  AUTHORS  CMakeLists.txt  Macros.cmake  README.md  freecad-path.desktop  notes.sh
src/: CMakeLists.txt  FCConfig.h  QtOpenGL.h  QtOpenGL.h.cmake  Version.h.cmake  stdexport.h
src/App/: Annotation.cpp  Annotation.h  Application.cpp  Application.h  ApplicationPy.cpp  CMakeLists.txt  ColorModel.cpp  ColorModel.h  ComplexGeoData.cpp  ComplexGeoData.h  ComplexGeoDataPyImp.cpp  Document.cpp  Document.h  DocumentObject.cpp  DocumentObject.h  DocumentObjectExtension.cpp  DocumentObjectExtension.h  DocumentObjectExtensionPyImp.cpp  DocumentObjectFileIncluded.cpp  DocumentObjectFileIncluded.h  DocumentObjectGroup.cpp  DocumentObjectGroup.h  DocumentObjectGroupPyImp.cpp  DocumentObjectPyImp.cpp  DocumentObserver.cpp  DocumentObserver.h  DocumentObserverPython.cpp  DocumentObserverPython.h  DocumentPyImp.cpp  DynamicProperty.cpp  DynamicProperty.h  Enumeration.cpp  Enumeration.h  Expression.cpp  Expression.h  ExpressionParser.tab.h  ExpressionVisitors.h  Extension.cpp  Extension.h  ExtensionContainer.cpp  (+81 more)
src/Base/: Axis.cpp  Axis.h  AxisPyImp.cpp  Base64.cpp  Base64.h  BaseClass.cpp  BaseClass.h  BaseClassPyImp.cpp  BoundBox.h  BoundBoxPyImp.cpp  Builder3D.cpp  Builder3D.h  CMakeLists.txt  Console.cpp  Console.h  CoordinateSystem.cpp  CoordinateSystem.h  CoordinateSystemPyImp.cpp  Debugger.cpp  Debugger.h  Exception.cpp  Exception.h  ExceptionFactory.cpp  ExceptionFactory.h  Factory.cpp  Factory.h  FileInfo.cpp  FileInfo.h  FileTemplate.cpp  FileTemplate.h  FutureWatcherProgress.cpp  FutureWatcherProgress.h  GeometryPyCXX.cpp  GeometryPyCXX.h  Handle.cpp  Handle.h  InputSource.cpp  InputSource.h  Interpreter.cpp  Interpreter.h  (+81 more)
src/CXX/: Config.hxx  Exception.hxx  Extensions.hxx  IndirectPythonInterface.cxx  IndirectPythonInterface.hxx  Objects.hxx  WrapPython.h  cxx_extensions.cxx  cxxextensions.c  cxxsupport.cxx
src/Ext/: CMakeLists.txt
src/Gui/: Action.cpp  Action.h  ActionFunction.cpp  ActionFunction.h  ActiveObjectList.cpp  ActiveObjectList.h  Application.cpp  Application.h  ApplicationPy.cpp  AutoSaver.cpp  AutoSaver.h  BitmapFactory.cpp  BitmapFactory.h  BlenderNavigationStyle.cpp  CADNavigationStyle.cpp  CMakeLists.txt  CallTips.cpp  CallTips.h  Clipping.cpp  Clipping.h  CombiView.cpp  CombiView.h  Command.cpp  Command.h  CommandDoc.cpp  CommandFeat.cpp  CommandMacro.cpp  CommandStd.cpp  CommandStructure.cpp  CommandTest.cpp  CommandView.cpp  CommandWindow.cpp  (+351 more)
src/Main/: CMakeLists.txt  FreeCADGuiPy.cpp  MainCmd.cpp  MainGui.cpp  MainPy.cpp  freecad.rc
src/Mod/Import/: CMakeLists.txt  Init.py  InitGui.py  gzip_utf8.py  stepZ.py
src/Mod/Import/App/: AppImport.cpp  AppImportPy.cpp  CMakeLists.txt  ExportOCAF.cpp  ExportOCAF.h  FeatureImportIges.cpp  FeatureImportIges.h  FeatureImportStep.cpp  FeatureImportStep.h  ImportOCAF.cpp  ImportOCAF.h  ImportOCAFAssembly.cpp  ImportOCAFAssembly.h  PlmXmlParser.py  PreCompiled.h  StepShape.cpp  StepShape.h  StepShapePyImp.cpp
src/Mod/Import/Gui/: AppImportGui.cpp  AppImportGuiPy.cpp  CMakeLists.txt  Command.cpp  PreCompiled.h  Workbench.cpp  Workbench.h
src/Mod/Path/App/: AppPath.cpp  AppPathPy.cpp  Area.cpp  Area.h  AreaParams.h  AreaPyImp.cpp  CMakeLists.txt  Command.cpp  Command.h  CommandPyImp.cpp  FeatureArea.cpp  FeatureArea.h  FeatureAreaPyImp.cpp  FeaturePath.cpp  FeaturePath.h  FeaturePathCompound.cpp  FeaturePathCompound.h  FeaturePathCompoundPyImp.cpp  FeaturePathShape.cpp  FeaturePathShape.h  ParamsHelper.h  Path.cpp  Path.h  PathPyImp.cpp  PropertyPath.cpp  PropertyPath.h  PropertyTool.cpp  PropertyTool.h  PropertyTooltable.cpp  PropertyTooltable.h  Tooltable.cpp  Tooltable.h  TooltablePyImp.cpp
src/Mod/Path/App/boost_fix/container/detail/: memory_util.hpp
src/Mod/Path/App/boost_fix/intrusive/detail/: has_member_function_callable_with.hpp  memory_util.hpp
src/Mod/Path/libarea/: Adaptive.cpp  Adaptive.hpp  Arc.cpp  Arc.h  Area.cpp  Area.h  AreaClipper.cpp  AreaOrderer.cpp  AreaOrderer.h  AreaPocket.cpp  Box2D.h  CMakeLists.txt  Circle.cpp  Circle.h  Curve.cpp  Curve.h  Point.h  PythonStuff.cpp  PythonStuff.h  clipper.cpp  clipper.hpp  pyarea.cpp
src/Mod/Path/libarea/kurve/: Construction.cpp  Finite.cpp  Matrix.cpp  geometry.h  kurve.cpp  offset.cpp
src/Mod/Sketcher/: CMakeLists.txt  Init.py  InitGui.py  Profiles.py  SketcherExample.py  TestSketcherApp.py  TestSketcherGui.py
src/Mod/Sketcher/App/: Analyse.h  AppSketcher.cpp  AppSketcherPy.cpp  CMakeLists.txt  Constraint.cpp  Constraint.h  ConstraintPyImp.cpp  PropertyConstraintList.cpp  PropertyConstraintList.h  Sketch.cpp  Sketch.h  SketchAnalysis.cpp  SketchAnalysis.h  SketchObject.cpp  SketchObject.h  SketchObjectPyImp.cpp  SketchObjectSF.cpp  SketchObjectSF.h  SketchObjectSFPyImp.cpp  SketchPyImp.cpp
src/Mod/Sketcher/App/planegcs/: Constraints.cpp  Constraints.h  GCS.cpp  GCS.h  Geo.cpp  Geo.h  SubSystem.cpp  SubSystem.h  Util.h  qp_eq.cpp  qp_eq.h
src/Mod/Sketcher/Gui/: AppSketcherGui.cpp  CMakeLists.txt  Command.cpp  CommandAlterGeometry.cpp  CommandConstraints.cpp  CommandConstraints.h  CommandCreateGeo.cpp  CommandSketcherBSpline.cpp  CommandSketcherTools.cpp  CommandSketcherVirtualSpace.cpp  DrawSketchHandler.cpp  DrawSketchHandler.h  EditDatumDialog.cpp  EditDatumDialog.h  GeometryCreationMode.h  PreCompiled.h  PropertyConstraintListItem.cpp  PropertyConstraintListItem.h  ShortcutListener.cpp  ShortcutListener.h  SketchMirrorDialog.cpp  SketchMirrorDialog.h  SketchOrientationDialog.cpp  SketchOrientationDialog.h  SketchOrientationDialog.ui  SketchRectangularArrayDialog.cpp  SketchRectangularArrayDialog.h  SketcherRegularPolygonDialog.cpp  SketcherRegularPolygonDialog.h  SketcherSettings.cpp  SketcherSettings.h  SoDatumLabel.cpp  SoDatumLabel.h  SoZoomTranslation.cpp  SoZoomTranslation.h  TaskDlgEditSketch.cpp  TaskDlgEditSketch.h  TaskSketcherConstrains.cpp  TaskSketcherConstrains.h  TaskSketcherCreateCommands.cpp  (+17 more)
src/Mod/Sketcher/Gui/Resources/: Sketcher.qrc
src/Mod/Sketcher/ProfileLib/: Hexagon.py  RegularPolygon.py
(+1124 files in other folders)
